[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bip85"
version = "0.3.0"
description = "Implementation of Bitcoin BIP 85"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Ben Westgate", email = "benwestgate@protonmail.com" }
]
urls = { "Homepage" = "https://github.com/benwestgate/bip85" }
keywords = ["BIP85", "entropy", "bitcoin"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
]
requires-python = ">=3.6"
dependencies = [
  "mnemonic",
  "pycoin",
  "base58",
  "pycryptodome",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
bip85-cli = "bip85.cli:main"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"bip85" = ["py.typed"]
